generated/LanguageParser.py
# Generated from Language.g4 by ANTLR 4.9.3
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LanguageParser ( Parser ):

    grammarFileName = "Language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'function'", "'end'", "'class'", 
                     "'is'", "'if'", "' then'", "'elif'", "'then'", "'else'", 
                     "'for'", "'go'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'^'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'=='", "<INVALID>", "'>'", "<INVALID>", 
                     "'<'", "<INVALID>", "'&&'", "'||'", "'!'", "'='", "'.'", 
                     "':'", "','", "';'", "'''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "OP_ARTH", "N_STRING", "SCOPE", "TYP", 
                      "BOOL", "DECIMAL", "INT", "PLS", "MNS", "MUL", "DIV", 
                      "EXP", "LRB", "RRB", "LSB", "RSB", "LCB", "RCB", "EQ", 
                      "NEQ", "GT", "GTE", "LS", "LSE", "AND", "OR", "NOT", 
                      "ASN", "DOT", "COL", "COM", "SEM", "APO", "ID", "COMMENT", 
                      "LINE_COMMENT", "WS" ]

    RULE_start = 0
    RULE_instr = 1
    RULE_terminal = 2
    RULE_terminable = 3
    RULE_expression = 4
    RULE_n_func = 5
    RULE_argument = 6
    RULE_n_clas = 7
    RULE_n_array = 8
    RULE_n_if = 9
    RULE_n_for = 10
    RULE_array_row = 11
    RULE_call = 12
    RULE_clas = 13
    RULE_func_clas = 14
    RULE_array = 15
    RULE_array_range = 16
    RULE_value = 17
    RULE_assign = 18

    ruleNames =  [ "start", "instr", "terminal", "terminable", "expression", 
                   "n_func", "argument", "n_clas", "n_array", "n_if", "n_for", 
                   "array_row", "call", "clas", "func_clas", "array", "array_range", 
                   "value", "assign" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    OP_ARTH=13
    N_STRING=14
    SCOPE=15
    TYP=16
    BOOL=17
    DECIMAL=18
    INT=19
    PLS=20
    MNS=21
    MUL=22
    DIV=23
    EXP=24
    LRB=25
    RRB=26
    LSB=27
    RSB=28
    LCB=29
    RCB=30
    EQ=31
    NEQ=32
    GT=33
    GTE=34
    LS=35
    LSE=36
    AND=37
    OR=38
    NOT=39
    ASN=40
    DOT=41
    COL=42
    COM=43
    SEM=44
    APO=45
    ID=46
    COMMENT=47
    LINE_COMMENT=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def n_func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.N_funcContext)
            else:
                return self.getTypedRuleContext(LanguageParser.N_funcContext,i)


        def n_clas(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.N_clasContext)
            else:
                return self.getTypedRuleContext(LanguageParser.N_clasContext,i)


        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.InstrContext)
            else:
                return self.getTypedRuleContext(LanguageParser.InstrContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = LanguageParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 38
                    self.n_func()
                    pass

                elif la_ == 2:
                    self.state = 39
                    self.n_clas()
                    pass

                elif la_ == 3:
                    self.state = 40
                    self.instr()
                    pass


                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.T__3) | (1 << LanguageParser.T__5) | (1 << LanguageParser.T__10) | (1 << LanguageParser.SCOPE) | (1 << LanguageParser.TYP) | (1 << LanguageParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.AssignContext)
            else:
                return self.getTypedRuleContext(LanguageParser.AssignContext,i)


        def n_if(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.N_ifContext)
            else:
                return self.getTypedRuleContext(LanguageParser.N_ifContext,i)


        def n_for(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.N_forContext)
            else:
                return self.getTypedRuleContext(LanguageParser.N_forContext,i)


        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.CallContext)
            else:
                return self.getTypedRuleContext(LanguageParser.CallContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_instr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstr" ):
                listener.enterInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstr" ):
                listener.exitInstr(self)




    def instr(self):

        localctx = LanguageParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 49
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        self.state = 45
                        self.assign()
                        pass

                    elif la_ == 2:
                        self.state = 46
                        self.n_if()
                        pass

                    elif la_ == 3:
                        self.state = 47
                        self.n_for()
                        pass

                    elif la_ == 4:
                        self.state = 48
                        self.call()
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 51 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(LanguageParser.AssignContext,0)


        def expression(self):
            return self.getTypedRuleContext(LanguageParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_terminal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminal" ):
                listener.enterTerminal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminal" ):
                listener.exitTerminal(self)




    def terminal(self):

        localctx = LanguageParser.TerminalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_terminal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(LanguageParser.T__0)
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 54
                self.assign()
                pass

            elif la_ == 2:
                self.state = 55
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.InstrContext)
            else:
                return self.getTypedRuleContext(LanguageParser.InstrContext,i)


        def terminal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.TerminalContext)
            else:
                return self.getTypedRuleContext(LanguageParser.TerminalContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_terminable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminable" ):
                listener.enterTerminable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminable" ):
                listener.exitTerminable(self)




    def terminable(self):

        localctx = LanguageParser.TerminableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_terminable)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LanguageParser.T__5, LanguageParser.T__10, LanguageParser.SCOPE, LanguageParser.TYP, LanguageParser.ID]:
                    self.state = 58
                    self.instr()
                    pass
                elif token in [LanguageParser.T__0]:
                    self.state = 59
                    self.terminal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.T__0) | (1 << LanguageParser.T__5) | (1 << LanguageParser.T__10) | (1 << LanguageParser.SCOPE) | (1 << LanguageParser.TYP) | (1 << LanguageParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LanguageParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExpressionValueContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self):
            return self.getTypedRuleContext(LanguageParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionValue" ):
                listener.enterExpressionValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionValue" ):
                listener.exitExpressionValue(self)


    class ExpressionBoolContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExpressionContext,i)

        def EQ(self):
            return self.getToken(LanguageParser.EQ, 0)
        def NEQ(self):
            return self.getToken(LanguageParser.NEQ, 0)
        def GT(self):
            return self.getToken(LanguageParser.GT, 0)
        def GTE(self):
            return self.getToken(LanguageParser.GTE, 0)
        def LS(self):
            return self.getToken(LanguageParser.LS, 0)
        def LSE(self):
            return self.getToken(LanguageParser.LSE, 0)
        def NOT(self):
            return self.getToken(LanguageParser.NOT, 0)
        def AND(self):
            return self.getToken(LanguageParser.AND, 0)
        def OR(self):
            return self.getToken(LanguageParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionBool" ):
                listener.enterExpressionBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionBool" ):
                listener.exitExpressionBool(self)


    class ExpressionArithmContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExpressionContext,i)

        def OP_ARTH(self):
            return self.getToken(LanguageParser.OP_ARTH, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionArithm" ):
                listener.enterExpressionArithm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionArithm" ):
                listener.exitExpressionArithm(self)


    class ExpressionNestedContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LanguageParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LRB(self):
            return self.getToken(LanguageParser.LRB, 0)
        def expression(self):
            return self.getTypedRuleContext(LanguageParser.ExpressionContext,0)

        def RRB(self):
            return self.getToken(LanguageParser.RRB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionNested" ):
                listener.enterExpressionNested(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionNested" ):
                listener.exitExpressionNested(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LanguageParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LanguageParser.LRB]:
                localctx = LanguageParser.ExpressionNestedContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 65
                self.match(LanguageParser.LRB)
                self.state = 66
                self.expression(0)
                self.state = 67
                self.match(LanguageParser.RRB)
                pass
            elif token in [LanguageParser.N_STRING, LanguageParser.BOOL, LanguageParser.DECIMAL, LanguageParser.INT, LanguageParser.MNS, LanguageParser.LSB, LanguageParser.ID]:
                localctx = LanguageParser.ExpressionValueContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 69
                self.value()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 78
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = LanguageParser.ExpressionArithmContext(self, LanguageParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 72
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 73
                        self.match(LanguageParser.OP_ARTH)
                        self.state = 74
                        self.expression(5)
                        pass

                    elif la_ == 2:
                        localctx = LanguageParser.ExpressionBoolContext(self, LanguageParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 75
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 76
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.EQ) | (1 << LanguageParser.NEQ) | (1 << LanguageParser.GT) | (1 << LanguageParser.GTE) | (1 << LanguageParser.LS) | (1 << LanguageParser.LSE) | (1 << LanguageParser.AND) | (1 << LanguageParser.OR) | (1 << LanguageParser.NOT))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 77
                        self.expression(4)
                        pass

             
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class N_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYP(self):
            return self.getToken(LanguageParser.TYP, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def LRB(self):
            return self.getToken(LanguageParser.LRB, 0)

        def RRB(self):
            return self.getToken(LanguageParser.RRB, 0)

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.AssignContext)
            else:
                return self.getTypedRuleContext(LanguageParser.AssignContext,i)


        def terminable(self):
            return self.getTypedRuleContext(LanguageParser.TerminableContext,0)


        def COM(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.COM)
            else:
                return self.getToken(LanguageParser.COM, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_n_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_func" ):
                listener.enterN_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_func" ):
                listener.exitN_func(self)




    def n_func(self):

        localctx = LanguageParser.N_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_n_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(LanguageParser.TYP)
            self.state = 84
            self.match(LanguageParser.T__1)
            self.state = 85
            self.match(LanguageParser.ID)
            self.state = 86
            self.match(LanguageParser.LRB)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.SCOPE) | (1 << LanguageParser.TYP) | (1 << LanguageParser.ID))) != 0):
                self.state = 87
                self.assign()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LanguageParser.COM:
                    self.state = 88
                    self.match(LanguageParser.COM)
                    self.state = 89
                    self.assign()
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 97
            self.match(LanguageParser.RRB)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LanguageParser.T__0) | (1 << LanguageParser.T__5) | (1 << LanguageParser.T__10) | (1 << LanguageParser.SCOPE) | (1 << LanguageParser.TYP) | (1 << LanguageParser.ID))) != 0):
                self.state = 98
                self.terminable()


            self.state = 101
            self.match(LanguageParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYP(self):
            return self.getToken(LanguageParser.TYP, 0)

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)




    def argument(self):

        localctx = LanguageParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(LanguageParser.TYP)
            self.state = 104
            self.match(LanguageParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class N_clasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.AssignContext)
            else:
                return self.getTypedRuleContext(LanguageParser.AssignContext,i)


        def n_func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.N_funcContext)
            else:
                return self.getTypedRuleContext(LanguageParser.N_funcContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_n_clas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_clas" ):
                listener.enterN_clas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_clas" ):
                listener.exitN_clas(self)




    def n_clas(self):

        localctx = LanguageParser.N_clasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_n_clas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(LanguageParser.T__3)
            self.state = 107
            self.match(LanguageParser.ID)
            self.state = 108
            self.match(LanguageParser.T__4)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 109
                    self.assign() 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LanguageParser.TYP:
                self.state = 115
                self.n_func()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(LanguageParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class N_arrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(LanguageParser.LSB, 0)

        def array_row(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.Array_rowContext)
            else:
                return self.getTypedRuleContext(LanguageParser.Array_rowContext,i)


        def RSB(self):
            return self.getToken(LanguageParser.RSB, 0)

        def SEM(self):
            return self.getToken(LanguageParser.SEM, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_n_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_array" ):
                listener.enterN_array(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_array" ):
                listener.exitN_array(self)




    def n_array(self):

        localctx = LanguageParser.N_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_n_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(LanguageParser.LSB)
            self.state = 124
            self.array_row()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LanguageParser.SEM:
                self.state = 125
                self.match(LanguageParser.SEM)
                self.state = 126
                self.array_row()


            self.state = 129
            self.match(LanguageParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class N_ifContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.ExpressionContext,i)


        def terminable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.TerminableContext)
            else:
                return self.getTypedRuleContext(LanguageParser.TerminableContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_n_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_if" ):
                listener.enterN_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_if" ):
                listener.exitN_if(self)




    def n_if(self):

        localctx = LanguageParser.N_ifContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_n_if)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(LanguageParser.T__5)
            self.state = 132
            self.expression(0)
            self.state = 133
            self.match(LanguageParser.T__6)
            self.state = 134
            self.terminable()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LanguageParser.T__7:
                self.state = 135
                self.match(LanguageParser.T__7)
                self.state = 136
                self.expression(0)
                self.state = 137
                self.match(LanguageParser.T__8)
                self.state = 138
                self.terminable()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LanguageParser.T__9:
                self.state = 145
                self.match(LanguageParser.T__9)
                self.state = 146
                self.terminable()


            self.state = 149
            self.match(LanguageParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class N_forContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instr(self):
            return self.getTypedRuleContext(LanguageParser.InstrContext,0)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.INT)
            else:
                return self.getToken(LanguageParser.INT, i)

        def assign(self):
            return self.getTypedRuleContext(LanguageParser.AssignContext,0)


        def COL(self):
            return self.getToken(LanguageParser.COL, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_n_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_for" ):
                listener.enterN_for(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_for" ):
                listener.exitN_for(self)




    def n_for(self):
